Remove extra lines in assembler inline instructions

--- a/lab_09/makefile
+++ b/lab_09/makefile
@@ -2,11 +2,15 @@
 # -m80387 - заставляет компилятор генерировать инструкции для операций с плавающей запятой
 # -mno-80387 - заставляет компилятор генерировать инструкции, использующие библиотечные вызовы для операций с плавающей запятой
 # -mno-sse - запрещаем компилятору использовать регистры XMM/MMX и инструкции SSE
+
 # Ключ -mno-sse ОПЦИОНАЛЕН!!!!! (по крайней мере, на компьютере автора) Без него компилятор генерирует те же самые инструкции 
 # (не используя регистры XMM/MMX и инструкции SSE), потому что ключ -m80387 уже заставляет компилятор отключить SSE.
 # Из последней ссылки из readme к лабе: "При их компиляции с параметром -O0 gcc использует регистры XMM/MMX и инструкции SSE, 
 # если специально не заданы параметры -mno-sse (и другие)".
 # Слово "другие", видимо, является ключевым.
+
+# Также по ходу дела выяснилось, что для распознавания интеловского синтаксиса (а не нативного под gcc) достаточно компиляции с опцией -masm=intel (по крайней мере, в случае C++),
+# и не обязательно в начале аждой вставки указывать ".intel_syntax noprefix".
 
 _MAKE_OUT_DIR_ := $(shell mkdir -p out)
 _MAKE_ASM_DIR_ := $(shell mkdir -p assembly)
