Change output precision and corrected the typos

--- a/lab_09/makefile
+++ b/lab_09/makefile
@@ -9,8 +9,8 @@
 # если специально не заданы параметры -mno-sse (и другие)".
 # Слово "другие", видимо, является ключевым.
 
-# Также по ходу дела выяснилось, что для распознавания интеловского синтаксиса (а не нативного под gcc) достаточно компиляции с опцией -masm=intel (по крайней мере, в случае C++),
-# и не обязательно в начале аждой вставки указывать ".intel_syntax noprefix".
+# Также по ходу дела выяснилось, что для распознавания интеловского синтаксиса (а не нативного под gcc) достаточно компиляции с опцией -masm=intel,
+# и не обязательно в начале каждой вставки указывать ".intel_syntax noprefix".
 
 _MAKE_OUT_DIR_ := $(shell mkdir -p out)
 _MAKE_ASM_DIR_ := $(shell mkdir -p assembly)
